--- a/.travis.yml
+++ b/.travis.yml
@@ -2,10 +2,8 @@ os:
   - linux
 language: node_js
 node_js:
-  - "0.10"
-  - "0.12"
-  - "4"
-  - "6"
+  - "9"
+  - node
 env:
   - CXX=g++-4.8
 addons:
