--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "node-unifi",
-  "version": "1.2.2",
+  "version": "1.2.2a",
   "description": "NodeJS class for querying UniFi-Controller (www.ubnt.com)",
   "author": "Jens Maus <mail@jens-maus.de>",
-  "homepage": "https://github.com/jens-maus/node-unifi",
+  "homepage": "https://github.com/IPv64/node-unifi",
   "license": "MIT",
   "keywords": [
     "network",
@@ -14,7 +14,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/jens-maus/node-unifi.git"
+    "url": "git+https://github.com/IPv64/node-unifi.git"
   },
   "dependencies": {
     "request": "^2.69.0",
@@ -25,7 +25,7 @@
     "test": "echo \"WARNING: no test implemented yet\" && exit 0"
   },
   "bugs": {
-    "url": "https://github.com/jens-maus/node-unifi/issues"
+    "url": "https://github.com/IPv64/node-unifi/issues"
   },
   "readmeFilename": "README.md"
 }
